# open-literature-and-art

./: .gitignore  LICENSE  README.md  config.toml  install.ps1  install.sh
.github/workflows/: main.yaml  release-soil.yaml
content/: _index.md
content/authors/: _index.md
content/白定/: _index.md
content/白定/仙峰寺的一夜/: _index.md  大纲.md
content/白定/仙峰寺的一夜/大纲/: body.md  meta.toml
content/白定/地方教育/: _index.md  大纲.md
content/白定/地方教育/大纲/: body.md
content/白定/夜行性生物/: body.md  index.md  meta.toml
content/白定/杨朔的愿望/: body.md  index.md  meta.toml
content/白定/睡前故事：月亮/: body.md  index.md  meta.toml
content/白定/罗冬的故事/: body.md  index.md  meta.toml
content/白定/记念死者/: body.md  index.md  meta.toml
content/白定/高中回忆录/: body.md  index.md  meta.toml
scripts/: build.py  serve.py
soil/: Cargo.toml  build.rs
soil/src/: build.rs  config.rs  gen.rs  main.rs  project.rs  submit.rs  zola.rs
soil/testdata/: 短篇一.md  短篇一.meta.toml
soil/testdata/自引用目录/: meta.toml  自引用目录.md
soil/testdata/连载/: meta.toml  第一章.md  第一章.meta.toml  第二章.md  第二章.meta.toml
static/: shuffle.js  style.css
templates/: author-page.html  base.html  page.html  section.html  work-section.html
