[package]
name = "soil"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "soil"
path = "src/main.rs"

[features]
dev = []

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
dirs = "5"
flate2 = "1"
tar = "0.4"
zip = "0.6"
anyhow = "1"
dialoguer = "0.11"
